# auto-shell

./: .gitignore
.zcode/plans/: plan-sess_542e9a9d-8984-4547-b9a7-c0b968826cfb.md
ash/: Cargo.toml
ash-core/: Cargo.toml
ash-core/benches/: batom_bench.rs
ash-core/src/: bookmarks.rs  lib.rs  security.rs
ash-core/src/cmd/: external.rs  interactive.rs  mod.rs
ash-core/src/completions/: auto.rs  command.rs  file.rs  flag.rs  help_parser.rs  mod.rs  provider.rs  spec.rs  spec_format.rs  types.rs
ash-core/src/parser/: lexer.rs  mod.rs  pipe_stages.rs  pipeline.rs  quote.rs  redirect.rs
ash-core/src/pipeline/: atom.rs  atom_pipeline.rs  atom_stream.rs  batom.rs  convert.rs  external_stream.rs  mod.rs  operators.rs
ash-core/src/shell/: mod.rs  vars.rs
ash-gui/: Cargo.toml
ash-gui/ash-gui-bin/: Cargo.toml
ash-gui/ash-gui-bin/src/: main.rs
ash/auto-shell/: Cargo.toml  FEATURES.md  PROGRESS.md  README.md  TAB_COMPLETION.md  TAB_COMPLETION_FIX_SUMMARY.md  TEST_TAB_COMPLETION.md  output.txt
ash/auto-shell/src/: auto_config.rs  bookmarks.rs  cmd.rs  completions.rs  config.rs  default_ashrc.txt  host.rs  job.rs  lib.rs  main.rs  repl_mode.rs  shell.rs  signal.rs  term.rs
ash/auto-shell/src/cmd/: auto.rs  builtin.rs  data.rs  external.rs  fs.rs  parser.rs  pipeline.rs  pipeline_convert.rs  pipeline_data.rs  registry.rs  value_helpers.rs
ash/auto-shell/src/cmd/commands/: build.rs  cat.rs  cd.rs  code_highlight.rs  column.rs  cp.rs  cut.rs  date.rs  diff.rs  du.rs  each.rs  echo.rs  file.rs  find.rs  fmt.rs  from_csv.rs  from_json.rs  from_toml.rs  from_xml.rs  from_yaml.rs  get.rs  glob.rs  grep.rs  head.rs  help.rs  http_delete.rs  http_get.rs  http_head.rs  http_post.rs  http_put.rs  insert.rs  less.rs  ln.rs  ls.rs  math_avg.rs  math_max.rs  math_min.rs  math_round.rs  math_sum.rs  mkdir.rs  (+40 more)
ash/auto-shell/src/completions/: auto.rs  command.rs  file.rs  reedline.rs  spec_tiers.rs
ash/auto-shell/src/completions/definitions/: cargo.rs  docker.rs  env.rs  git.rs  mod.rs  npm.rs  ssh.rs
ash/auto-shell/src/core/: mod.rs
ash/auto-shell/src/core/cmd/: mod.rs
ash/auto-shell/src/core/completions/: command.rs  mod.rs
ash/auto-shell/src/core/data/: mod.rs  types.rs
ash/auto-shell/src/core/parser/: quote.rs  redirect.rs
ash/auto-shell/src/data/: convert.rs  mod.rs  table.rs  value.rs
ash/auto-shell/src/frontend/: ai.rs  completions_reedline.rs  mod.rs  repl.rs
ash/auto-shell/src/frontend/renderer/: buffer_to_ansi.rs  mod.rs  table.rs
ash/auto-shell/src/frontend/term/: color.rs  highlight.rs  mod.rs  prompt.rs
ash/auto-shell/src/menu/: ash_menu.rs  layout.rs  mod.rs  render.rs  style.rs
ash/auto-shell/src/parser/: history.rs  mod.rs
ash/auto-shell/src/prompt/: config.rs  context.rs  engine.rs  mod.rs  module.rs
ash/auto-shell/src/prompt/modules/: character.rs  cmd_duration.rs  directory.rs  git_branch.rs  git_status.rs  mod.rs  status.rs  time.rs
ash/auto-shell/src/shell/: vars.rs
ash/auto-shell/tests/: atom_pipeline.rs  completion_runtime.rs  completions_cmd.rs  env_command.rs  ls_render.rs  structured_commands.rs
docs/: roadmap.md
docs/release_notes/: v0.4.md  v0.5.md
examples/: deploy.ash
plans/: 001-open-command.md  002-parse-args-backslash-paths.md  003-sort-by-field.md  004-open-gui-show-parse.md  005-complete-option-names.md  006-posix-compliance.md  007-ms1-agent-invocable.md  008-ms2a-security-policy.md  009-ms2b-path-sandbox.md  010-ms3a-trycatch-while.md  011-ms3b-shell-bridge.md  012-ash-history-autosuggestion.md  013-autoshell-warp-design.md  014-ash-layered-architecture-ratatui.md  015-ash-completion-system.md  016-ash-environment-variable-system.md  017-ash-daily-driver-roadmap.md  018-ash-script-execution-shell-syntax.md  019-ash-production-gap-analysis.md  020-ash-remaining-features-roadmap.md  021-ash-arbitrary-command-completion.md  022-ash-24bit-truecolor.md  023-ash-unified-config-migration.md  024-ash-structured-pipeline-dsl.md  025-ash-repl-input-modes.md  026-ash-extraction.md  027-ash-ai-chat-mode.md
