[package]
name = "auto-shell"
version = "0.1.0"
edition = "2021"
description = "A modern shell environment using AutoLang as the scripting language"
authors = ["AutoLang Contributors"]
license = "MIT"

[dependencies]
# AutoLang integration
auto-lang = { path = "../auto-lang" }
auto-val = { path = "../auto-val" }

# Terminal and REPL
reedline = "0.44.0"
crossterm = "0.27"
nu-ansi-term = "0.49"

# Ratatui rendering (core + widgets without crossterm backend)
ratatui-core = "0.1"
ratatui-widgets = "0.3"

# Data structures
indexmap = "2.0"

# Platform support
dirs = "5.0"
# 系统信息（来自 nushell）
sysinfo = "0.33"

# File system utilities
uucore = "0.0.27"
# Individual uuutils commands (pick what we need)
# We'll implement simple versions ourselves for better integration

# Utilities
chrono = "0.4"
regex = "1.10"
unicode-segmentation = "1.10"
# Note: Using regex crate instead of grep crate for simpler API
# ripgrep's grep crate has complex module structure that's not well documented

# Error handling
miette = "7.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
