[package]
name = "auto-shell"
version = "0.1.0"
edition = "2021"
description = "ASH - A modern shell environment using AutoLang as the scripting language"
authors = ["AutoLang Contributors"]
license = "MIT"

[[bin]]
name = "ash"
path = "src/main.rs"

[dependencies]
# AutoLang integration (Plan 330: paths point back to the auto-lang repo)
auto-lang = { path = "../../../auto-lang/crates/auto-lang" }
auto-val = { path = "../../../auto-lang/crates/auto-val" }

# Plan 325: AI client for F3 AI mode (from auto-ai repo at ../../../auto-ai)
auto-ai-client = { path = "../../../auto-ai/crates/auto-ai-client" }
tokio = { version = "1", features = ["full"] }
# Plan 027: explicit dep (previously transitive via auto-ai-client -> ai-config)
serde_json = "1.0"

# Ash Core (pure logic, zero terminal deps)
ash-core = { path = "../../ash-core" }

# Terminal and REPL
reedline = "0.44.0"
crossterm = "0.27"
nu-ansi-term = "0.50"

# Ratatui rendering (core + widgets without crossterm backend)
ratatui-core = "0.1"
ratatui-widgets = "0.3"

# Data structures
indexmap = "2.0"

# Platform support
dirs = "5.0"
# 系统信息（来自 nushell）
sysinfo = "0.33"
# 用系统默认程序打开文件（Plan 004: open 命令的 GUI 打开）
opener = "0.8"

# File system utilities
uucore = "0.0.27"
glob = "0.3"
# Individual uuutils commands (pick what we need)
# We'll implement simple versions ourselves for better integration

# Utilities
chrono = "0.4"
regex = "1.10"
unicode-segmentation = "1.10"
unicode-width = "0.2"
# Syntax highlighting for `show` command (bat-style code coloring)
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
# Note: Using regex crate instead of grep crate for simpler API
# ripgrep's grep crate has complex module structure that's not well documented

# Prompt engine
rayon = "1.12"
toml = "0.8"
toml_edit = "0.22"

# File watching (git info refresh on .git changes)
notify = "7.0"

# Error handling
miette = "7.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
